BARC UAT/src/objects/Inventory__c.object
<CustomObject>
    <fields>
        <fullName>Blocked_Stock__c</fullName>
        <label>Blocked Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Active_Stock__c</fullName>
        <label>Current/ Active Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Faulty_Stock__c</fullName>
        <label>Faulty Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HSN_Code__c</fullName>
        <label>HSN Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Transit_Stock__c</fullName>
        <label>In Transit Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Stock__c</fullName>
        <label>Maximum Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Minimum_Stock__c</fullName>
        <label>Minimum Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Spec__c</fullName>
        <label>Product Spec</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory</relationshipLabel>
        <relationshipName>Inventory</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Bulk_Faulty_Quantity__c</fullName>
        <label>Total Faulty Quantity</label>
        <summarizedField>Bulk_Inventory_Products__c.Total_Faulty_Quantity__c</summarizedField>
        <summaryForeignKey>Bulk_Inventory_Products__c.Inventory__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Bulk_Received_Quantity__c</fullName>
        <label>Total Received Quantity</label>
        <summarizedField>Bulk_Inventory_Products__c.Received_Quantity__c</summarizedField>
        <summaryForeignKey>Bulk_Inventory_Products__c.Inventory__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Faulty_Products__c</fullName>
        <label>Total Faulty Products</label>
        <summaryFilterItems>
            <field>Inventory_Product__c.Status__c</field>
            <operation>equals</operation>
            <value>Not Ok</value>
        </summaryFilterItems>
        <summaryForeignKey>Inventory_Product__c.Inventory__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Received_Quantity__c</fullName>
        <label>Total Received Quantity</label>
        <summaryForeignKey>Inventory_Product__c.Inventory__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Write_Off_Stock__c</fullName>
        <label>Write Off Stock</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Inventory</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>INV-{0}</displayFormat>
        <label>Inventory  No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory</pluralLabel>
    <recordTypes>
        <fullName>Bulk_Inventory</fullName>
        <active>true</active>
        <label>Bulk Inventory</label>
    </recordTypes>
    <recordTypes>
        <fullName>Unit_Inventory</fullName>
        <active>true</active>
        <label>Unit Inventory</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>